--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -18,7 +18,7 @@
             <input type="checkbox" name="lbs" id="lbs" />Weight in pounds?</label>
     </fieldset>
     <br />
-    <input type="submit" value="Add to Log" id="submit"/>
+    <input type="submit" value="Update Workout Log" id="submit"/>
  </fieldset>
 </form>
 
