--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -18,6 +18,11 @@
             <input type="checkbox" name="lbs" id="lbs" />Weight in pounds?</label>
     </fieldset>
     <br />
+    <fieldset>
+      <label>Date:</label>
+      <input type="date" name="date" id="date">
+    </fieldset>
+    <br/>
     <input type="submit" value="Update Workout Log" id="submit"/>
  </fieldset>
 </form>
