--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -23,7 +23,8 @@
       <input type="date" name="date" id="date">
     </fieldset>
     <br/>
-    <input type="submit" value="Update Workout Log" id="submit"/>
+    <input type="submit" value="Add New Workout To Log" id="submit"/>
+    <input type="submit" value="Update Existing Entry" id="submit2"/>
  </fieldset>
 </form>
 
