--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,6 @@
 <form>
   <fieldset>
-    <legend>Workout Log</legend>
+    <legend>Add/Update Log</legend>
     <fieldset>
       <label>Exercise Name:</label>
       <input type="text" name="name" id="name" size="30" maxlength="100">
@@ -23,8 +23,8 @@
       <input type="date" name="date" id="date">
     </fieldset>
     <br/>
-    <input type="submit" value="Add New Workout To Log" id="submit"/>
-    <input type="submit" value="Update Existing Entry" id="submit2"/>
+    <input type="submit" value="Add New Entry to Log" id="submit"/>
+    <input type="submit" value="Update Existing Log Entry" id="submit2"/>
  </fieldset>
 </form>
 
